--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header{
 }
 
 
-.card:hover h2 {
+.card h2:hover {
     transition: transform 0.3s ease, filter 0.3s ease;
     transform: scale(1.15);
 }
